--- a/css/styles.css
+++ b/css/styles.css
@@ -48,9 +48,7 @@ img {
   align-items: center;
   
 }
-.header-addres {
-  margin-left: auto;
-}
+
 .header-container {
   display: flex;
 }
@@ -65,7 +63,6 @@ img {
   color: #4d5ae5;
   text-decoration: none;
   position: relative;
-  color: #404bbf;
 }
 
 .header-logo-link span {
@@ -88,19 +85,88 @@ img {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  margin-right: 76px
-}
-
-.header-logo-link {
   margin-right: 76px;
-  position: relative;
-  color: #404bbf;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link-item {
   padding: 24px 0;
+  position: relative;
+  color: #404bbf;
+  text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.header-link-item::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
+}
+
+/*------------addres meny-----------------*/
+
+.list-address-menu link {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.list-address-menu::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
+}
+
+.header-addres-list li:last-child {
+  margin-right: 0;
+}
+
+.header-addres-list {
+  color:  #434455;
+  font-size: 16px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+  display: flex;
+  gap: 40px;
+  list-style: none;
+  padding: 0;
+  align-items: center;
+}
+
+.header-addres {
+  font-style: normal;
+  align-items: center;
+  margin-left: auto;
+}
+
+.list-address-menu :focus,
+.list-address-menu :hover {
+  color: #404bbf;
+}
+
+.list-address-menu a {
+  color: #434455;
+}
+
+.list-address-menu {
+  color: #434455;
+  font-size: 16px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+  align-items: center;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 
 /*---------Meny Nav-------------------*/
 .header-navigation .list {
@@ -142,10 +208,6 @@ img {
   color: #404bbf;
 }
 
-.header-link-item {
-  text-decoration: none;
-}
-
 .link-menu {
   text-decoration: none;
   color: var(--link-color);
@@ -181,66 +243,6 @@ img {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.32px;
-}
-
-/*------------addres meny-----------------*/
-
-.list-address-menu link {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.list-address-menu::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  height: 4px;
-  background-color: #404bbf;
-  border-radius: 2px;
-}
-
-.header-addres-list li:last-child {
-  margin-right: 0;
-}
-
-.header-addres-list {
-  color:  #434455;
-  font-size: 16px;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.5;
-  letter-spacing: 0.32px;
-  display: flex;
-  gap: 40px;
-  list-style: none;
-  padding: 0;
-  align-items: center;
-}
-
-.header-addres {
-  font-style: normal;
-  align-items: center;
-}
-
-.list-address-menu :focus,
-.list-address-menu :hover {
-  color: #404bbf;
-}
-
-.list-address-menu a {
-  color: #434455;
-}
-
-.list-address-menu {
-  color: #434455;
-  font-size: 16px;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.5;
-  letter-spacing: 0.32px;
-  align-items: center;
 }
 
 /*------------------ SECTION 1 CAP-----------------*/
