--- a/css/styles.css
+++ b/css/styles.css
@@ -90,12 +90,17 @@ img {
 
 .header-link-item {
   padding: 24px 0;
-  position: relative;
   color: #404bbf;
   text-decoration: none;
+}
+
+.header-link-item:nth-child(1) a {
+  position: relative;
+  color: #404bbf;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.header-link-item::after {
+
+.header-link-item:nth-child(1) a::after {
   content: '';
   position: absolute;
   left: 0;
