--- a/css/styles.css
+++ b/css/styles.css
@@ -319,17 +319,17 @@ img {
   margin-bottom: 8px;
 }
 
-
-.icon-container {
+div[class*="icon-"] {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 112px;
   background-color: #f4f4fd;
   border-radius: 4px;
+  margin-bottom: 8px;
 }
 
-.icon-container svg {
+svg {
   width: 64px;
   height: 64px;
 }
