--- a/css/styles.css
+++ b/css/styles.css
@@ -319,7 +319,7 @@ img {
   margin-bottom: 8px;
 }
 
-div[class*="icon-"] {
+.icon-container-svg{
   display: flex;
   align-items: center;
   justify-content: center;
@@ -333,7 +333,7 @@ svg {
   width: 64px;
   height: 64px;
 }
-/*------------------- SECTION 3 FEATURES---------------------*/
+/*------------------- SECTION 2 FEATURES---------------------*/
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -451,6 +451,7 @@ svg {
   border-top-right-radius: 4px; 
   border-bottom-left-radius:4px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .employee-info {
