--- a/css/styles.css
+++ b/css/styles.css
@@ -755,7 +755,7 @@ img {
   border: none;
 }
 
-/*-----------------------CAP SECTION ------------------*/
+/*-----------------------PORTFOLIO CAP SECTION ------------------*/
 
 .visually-hidden {
   position: absolute;
@@ -777,6 +777,22 @@ img {
 
 .section-menu-item {
   margin-right: 24px;
+  display: block;
+}
+
+.section-menu-item:first-child .section-menu-link:hover,
+.section-menu-item:first-child .section-menu-link:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+/* Стили для кнопки при наведении */
+.section-menu-link:hover {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+/* Стили для кнопки при фокусе */
+.section-menu-link:focus {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .section-menu-item:last-child {
