--- a/css/styles.css
+++ b/css/styles.css
@@ -261,13 +261,7 @@ img {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.container .cap-container {
-  text-align: center;
+ 
 }
 
 .here-title {
@@ -280,7 +274,9 @@ img {
   letter-spacing: 1.12px;
   max-width: 496px;
   margin-bottom: 48px;
-  text-align: center
+  display: flex;
+  justify-content: center; 
+  align-items: center;
 }
 
 
@@ -571,6 +567,9 @@ img {
   line-height: 1.11;
   color: #2e2f42;
   margin-bottom: 72px;
+  display: flex;
+  justify-content: center; 
+  align-items: center;
 }
 
 
@@ -581,8 +580,10 @@ img {
 }
 
 .customer-item {
-  width: calc((100% - 120px) / 6);
   height: 88px;
+}
+.customer-item:first-child {
+  width: calc((100% - 120px) / 6);
 }
 
 .customer-link {
