--- a/css/styles.css
+++ b/css/styles.css
@@ -444,10 +444,7 @@ img {
 }
 
 .made-idem {
-  border-top-left-radius: 0px; 
-  border-top-right-radius: 0px; 
-  border-top-right-radius: 4px; 
-  border-bottom-left-radius:4px;
+  border-radius: 0px 0px 4px 4px; 
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
@@ -541,7 +538,11 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-media-link:hover,
+.social-media-link:hover {
+  background-color: #404bbf;
+}
+
+    
 .social-media-link:focus {
   background-color: #404bbf;
 }
