--- a/css/styles.css
+++ b/css/styles.css
@@ -414,7 +414,7 @@ img {
   margin-right: 24px;
 }
 
-.wedo-item:last-child {
+.wedo-item {
   margin-right: 0;
 }
 
@@ -432,7 +432,7 @@ img {
 }
 /*------------------ SECTION 4 TEAM-------------------------*/
 
-.made-list {
+.made-listl {
   border-top-left-radius: 0px; 
   border-top-right-radius: 0px; 
   border-top-right-radius: 4px; 
@@ -443,9 +443,12 @@ img {
   padding: 0;
 }
 
-.made-idem {
+.made-item {
   border-radius: 0px 0px 4px 4px; 
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  width: calc((100% - 72px) / 4);
+  background-color: #FFFFFF;
+ 
 }
 
 .employee-info {
@@ -462,18 +465,6 @@ img {
   margin-bottom: 8px;
 }
 
-.made-item:last-child {
-  margin-right: 0;
-}
-
-.made-idem:first-child {
-  border-top-left-radius: 0px;
-  border-top-right-radius: 0px;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-  width: calc((100% - 72px) / 4);
-}
-
 .made-title {
   color: var(--navyblue, #2e2f42);
   text-align: center;
@@ -488,10 +479,7 @@ img {
   text-align: center;
 }
 
-.made-list li {
-  background-color: #FFFFFF;
 
-}
 
 .made-text {
   color: var(--slate, #434455);
