--- a/css/styles.css
+++ b/css/styles.css
@@ -593,13 +593,17 @@ img {
 
 /*--------------FOOTER DIV 1---------------------------*/
 .footer-container{
-  margin-right: 120px;
   display: flex;
   align-items: baseline;
+  
 }
 
 .footer-logo-text {
   margin-right: 120px;
+  padding-left: 120px;
+  
+  
+  
 }
 
 .footer {
@@ -667,10 +671,6 @@ img {
 }
 
 /*-----------------------FOOTER SOCIAL DIV 2------------------*/
-.social-media-container {
-  
-}
-
 
 .social-media-title {
   font-size: 16px;
@@ -770,6 +770,24 @@ img {
   border: none;
 }
 
+/*-----------------------PORTFOLIO HEADER------------------*/
+.link-menu:first-child  {
+  position: relative;
+  color: #404bbf;
+}
+
+.link-menu::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  width: 100%;
+  background-color: #404bbf;
+  border-radius: 2px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 /*-----------------------PORTFOLIO CAP SECTION ------------------*/
 
 .visually-hidden {
@@ -800,12 +818,12 @@ img {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-/* Стили для кнопки при наведении */
+
 .section-menu-link:hover {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-/* Стили для кнопки при фокусе */
+
 .section-menu-link:focus {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
