--- a/css/styles.css
+++ b/css/styles.css
@@ -771,9 +771,10 @@ img {
 }
 
 /*-----------------------PORTFOLIO HEADER------------------*/
-.link-menu:first-child  {
+.link-menu  {
   position: relative;
   color: #404bbf;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-menu::after {
@@ -811,20 +812,17 @@ img {
 .section-menu-item {
   margin-right: 24px;
   display: block;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
-.section-menu-item:first-child .section-menu-link:hover,
-.section-menu-item:first-child .section-menu-link:focus {
+.section-menu-item .section-menu-link:hover,
+.section-menu-item .section-menu-link:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 
-.section-menu-link:hover {
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-
-.section-menu-link:focus {
+.section-menu-link:hover
+.section-menu-link:focus  {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
@@ -902,7 +900,29 @@ img {
 /*---------------------PHOTO SECTION-------------------*/
 .name-item-list {
   width: calc((100% - 48px) /3);
-  
+  display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.container-cards-photo {
+  position: relative;
+  overflow: hidden;
+}
+
+.cards-photo-text {
+  position: absolute;
+  top: 0;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color:#f4f4fd;
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  height: 100%;
+  width: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+
 }
 
 .list-cards {
@@ -917,17 +937,14 @@ img {
 
 .name-photo {
   margin-bottom: 8px;
-}
-.name {
-  background: #fff;
-}
-
-.name-photo {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+}
+.name {
+  background: #fff;
 }
 
 .name-text-item {
@@ -937,4 +954,8 @@ img {
   color: var(--paragraph-color, #434455);
 }
 
-/*------------FOOTER PORTFOLIO-------------- */
+.name-text-item:hover
+.name-text-item:focus{
+  transform: translateY(0%);
+}
+
