--- a/css/styles.css
+++ b/css/styles.css
@@ -767,7 +767,7 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/*-----------------------PORTFOLIO CAP SECTION ------------------*/
+/*-----------------------PORTFOLIO MAIN CAP SECTION ------------------*/
 
 .visually-hidden {
   position: absolute;
@@ -853,7 +853,7 @@ img {
 }
 
 .portfolio-link:hover .cards-photo-text {
-  transform: translateY(100%);
+  transform: translateY(0%); 
 }
 
 .cards {
@@ -883,6 +883,7 @@ img {
   height: 100%;
   width: 100%;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+  transform: translateY(100%)
 
 }
 
