--- a/css/styles.css
+++ b/css/styles.css
@@ -695,6 +695,11 @@ img {
   fill: #f4f4fd; 
 }
 
+.social-media-icon:hover,
+.social-media-icon:focus{
+  background-color: #404bbf;
+}
+
 /*-----------------------MODERN ------------------*/
 .modal-container {
   position: fixed;
@@ -855,7 +860,9 @@ img {
 .portfolio-link:hover .cards-photo-text {
   transform: translateY(0%); 
 }
-
+.portfolio-link:focus .cards-photo-text {
+  transform: translateY(0%); 
+}
 .cards {
   display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
