--- a/css/styles.css
+++ b/css/styles.css
@@ -710,6 +710,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -725,7 +726,6 @@ img {
   padding: 20px;
   border-radius: 4px;
   position: absolute;
-  background-color: rgba(46, 47, 66, 0.4);
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
@@ -753,10 +753,6 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-svg {
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .modal-close-btn:hover{
   background-color: #404bbf;
   border: none;
@@ -764,6 +760,11 @@ svg {
 
 .modal-close-btn:focus{
   background-color: #404bbf;
+  border: none;
+}
+
+svg {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*-----------------------PORTFOLIO HEADER------------------*/
