--- a/css/styles.css
+++ b/css/styles.css
@@ -267,8 +267,6 @@ img {
 .here-title {
   color: #fff;
   font-size: 56px;
-  font-family: Roboto;
-  font-style: normal;
   font-weight: 700;
   line-height: 1.07;
   letter-spacing: 1.12px;
@@ -277,6 +275,7 @@ img {
   display: flex;
   justify-content: center; 
   align-items: center;
+  margin: 0 auto;
 }
 
 
@@ -295,6 +294,7 @@ img {
   border-radius: 4px;
   background-color: #4D5AE5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin: 0 auto;
 }
 
 
@@ -683,12 +683,6 @@ img {
  transition:  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
-.social-media-link:hover,
-.social-media-link:focus {
-  background-color: #31d0aa;
-}
-
 .social-media-icon {
   width: 24px;
   height: 24px;
@@ -753,11 +747,7 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-btn:hover{
-  background-color: #404bbf;
-  border: none;
-}
-
+.modal-close-btn:hover
 .modal-close-btn:focus{
   background-color: #404bbf;
   border: none;
@@ -926,6 +916,7 @@ svg {
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
+
 .name {
   background: #fff;
 }
