--- a/css/styles.css
+++ b/css/styles.css
@@ -464,7 +464,6 @@ img {
 }
 
 
-
 .made-text {
   color: var(--slate, #434455);
   text-align: center;
@@ -474,6 +473,8 @@ img {
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.32px;
+
+  
 }
 
 .made-name {
@@ -492,7 +493,10 @@ img {
   display: flex;
   justify-content: center;
   gap: 24px;
+  margin-top: 10px;
+  
 }
+  
 
 .social-media-link:hover,
 .social-media-link:focus {
@@ -744,9 +748,14 @@ img {
 }
 
 .modal-close-btn:hover
-.modal-close-btn:focus{
+.modal-close-btn:focus {
   background-color: #404bbf;
   border: none;
+}
+
+.modal-close-icon:hover
+.modal-close-icon:focus {
+  fill: #ffffff;
 }
 
 svg {
