--- a/css/styles.css
+++ b/css/styles.css
@@ -672,7 +672,7 @@ img {
 
 }
 
-.social-media-link {
+.social-med-link {
  width: 100%;
  height: 100%;
  background-color: #4d5ae5;
@@ -689,9 +689,15 @@ img {
   fill: #f4f4fd; 
 }
 
+.social-med-link:hover,
+.social-med-link:focus {
+  background-color:  #31d0aa; 
+}
+
 .social-media-icon:hover,
 .social-media-icon:focus{
-  background-color:  #31d0aa;
+  background-color: #4d5ae5;
+  
 }
 
 /*-----------------------MODERN ------------------*/
@@ -747,14 +753,14 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close-btn:hover
+.modal-close-btn:hover,
 .modal-close-btn:focus {
   background-color: #404bbf;
   border: none;
 }
 
-.modal-close-icon:hover
-.modal-close-icon:focus {
+.modal-close-btn:hover .modal-close-icon:hover,
+.modal-close-btn:focus .modal-close-icon:focus {
   fill: #ffffff;
 }
 
