--- a/css/styles.css
+++ b/css/styles.css
@@ -759,8 +759,8 @@ img {
   border: none;
 }
 
-.modal-close-btn:hover .modal-close-icon:hover,
-.modal-close-btn:focus .modal-close-icon:focus {
+.modal-close-btn:hover .modal-close-icon,
+.modal-close-btn:focus .modal-close-icon{
   fill: #ffffff;
 }
 
