--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,7 @@
   --text-color: #4d5ae5;
   --button-bg-color: #f4f4fd;
   --link-color: #2e2f42;
-  --logo-color: #4d5ae5; 
-  
+  --logo-color: #4d5ae5;
 }
 
 body {
@@ -15,7 +14,13 @@ body {
   background-color: #ffffff;
 }
 
-p,h1,h2,h3,h4,h5,h6 {
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -38,7 +43,8 @@ img {
 /*----------------HEADER LOGO---------------*/
 .header-menu {
   border-bottom: 1px solid #e7e9fc;
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .container {
   width: 1158px;
@@ -46,7 +52,6 @@ img {
   padding-right: 15px;
   margin: 0 auto;
   align-items: center;
-  
 }
 
 .header-container {
@@ -79,7 +84,7 @@ img {
 
 .header-logo-link {
   color: var(--logo-color);
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
   line-height: 1.17;
@@ -101,7 +106,7 @@ img {
 }
 
 .header-link-item:nth-child(1) a::after {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   bottom: -1px;
@@ -117,7 +122,7 @@ img {
 }
 
 .list-address-menu::after {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   bottom: -1px;
@@ -131,7 +136,7 @@ img {
 }
 
 .header-addres-list {
-  color:  #434455;
+  color: #434455;
   font-size: 16px;
   font-family: Roboto;
   font-style: normal;
@@ -171,7 +176,6 @@ img {
   align-items: center;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 
 /*---------Meny Nav-------------------*/
 .header-navigation .list {
@@ -252,16 +256,19 @@ img {
 
 /*------------------ SECTION 1 CAP-----------------*/
 .here {
-  background: var(--navyblue, #2E2F42);
+  background: var(--navyblue, #2e2f42);
   padding-top: 188px;
   padding-bottom: 188px;
-  text-align: center ;
-  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people.jpg);
+  text-align: center;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people.jpg);
   max-width: 1440px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
- 
 }
 
 .here-title {
@@ -275,7 +282,6 @@ img {
   margin-bottom: 48px;
   margin: 0 auto;
 }
-
 
 .here-btn {
   color: #ffffff;
@@ -291,15 +297,14 @@ img {
   min-width: 169px;
   height: 56px;
   border-radius: 4px;
-  background-color: #4D5AE5;
+  background-color: #4d5ae5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin: 0 auto;
 }
 
-
 .here-btn:hover,
 .here-btn:focus {
- background-color: #404bbf;
+  background-color: #404bbf;
 }
 
 /*------------------- SECTION 2 ---------------------*/
@@ -317,13 +322,12 @@ img {
   background-color: #f4f4fd;
   border-radius: 4px;
   margin-bottom: 8px;
-  
 }
 
 .icon-container-svg svg {
   width: 64px;
   height: 64px;
-  fill: #4d5ae5; 
+  fill: #4d5ae5;
 }
 
 .icon-container-svg:hover svg {
@@ -417,10 +421,10 @@ img {
 /*------------------ SECTION 4 TEAM-------------------------*/
 
 .made-list {
-  border-top-left-radius: 0px; 
-  border-top-right-radius: 0px; 
-  border-top-right-radius: 4px; 
-  border-bottom-left-radius:4px;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-top-right-radius: 4px;
+  border-bottom-left-radius: 4px;
   display: flex;
   gap: 24px;
   list-style: none;
@@ -428,11 +432,11 @@ img {
 }
 
 .made-item {
-  border-radius: 0px 0px 4px 4px; 
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   width: calc((100% - 72px) / 4);
-  background-color: #FFFFFF;
- 
+  background-color: #ffffff;
 }
 
 .employee-info {
@@ -463,7 +467,6 @@ img {
   text-align: center;
 }
 
-
 .made-text {
   color: var(--slate, #434455);
   text-align: center;
@@ -473,8 +476,6 @@ img {
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.32px;
-
-  
 }
 
 .made-name {
@@ -494,13 +495,11 @@ img {
   justify-content: center;
   gap: 24px;
   margin-top: 10px;
-  
 }
-  
 
 .social-media-link:hover,
 .social-media-link:focus {
-  background-color: #404bbf;; 
+  background-color: #404bbf;
 }
 
 .social-media-item {
@@ -534,10 +533,9 @@ img {
   color: #2e2f42;
   margin-bottom: 72px;
   display: flex;
-  justify-content: center; 
+  justify-content: center;
   align-items: center;
 }
-
 
 .customers-list {
   list-style: none;
@@ -558,7 +556,8 @@ img {
   height: 100%;
   border: 1px solid #8e8f99;
   border-radius: 4px;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: #8e8f99;
 }
 
@@ -573,10 +572,9 @@ img {
 }
 
 /*--------------FOOTER DIV 1---------------------------*/
-.footer-container{
+.footer-container {
   display: flex;
   align-items: baseline;
-  
 }
 
 .footer-logo-text {
@@ -600,7 +598,7 @@ img {
 }
 
 .footer-logo-link span {
-  color:  #f4f4fd;
+  color: #f4f4fd;
   font-size: 18px;
   font-family: "Raleway", sans-serif;
   font-style: normal;
@@ -620,9 +618,9 @@ img {
   letter-spacing: 0.32px;
   max-width: 264px;
 }
- 
+
 .footer-logo {
-  color:  #4d5ae5;
+  color: #4d5ae5;
   font-size: 18px;
   font-family: "Raleway", sans-serif;
   font-style: normal;
@@ -632,7 +630,7 @@ img {
   text-transform: uppercase;
 }
 
-.footer-logo-link  {
+.footer-logo-link {
   display: inline-block;
   margin-bottom: 16px;
   font-family: "Raleway", sans-serif;
@@ -644,8 +642,6 @@ img {
   color: #4d5ae5;
   text-decoration: none;
   position: relative;
- 
- 
 }
 
 /*-----------------------FOOTER SOCIAL DIV 2------------------*/
@@ -655,49 +651,45 @@ img {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #FFFFFF;
+  color: #ffffff;
   margin-bottom: 16px;
 }
 
 .social-media-footer {
   display: flex;
   gap: 16px;
-
-
 }
 
 .social-media-item {
   width: 40px;
   height: 40px;
-
 }
 
 .social-med-link {
- width: 100%;
- height: 100%;
- background-color: #4d5ae5;
- border-radius: 50%;
- display: flex;
- align-items: center;
- justify-content: center;
- transition:  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-media-icon {
   width: 24px;
   height: 24px;
-  fill: #f4f4fd; 
+  fill: #f4f4fd;
 }
 
 .social-med-link:hover,
 .social-med-link:focus {
-  background-color:  #31d0aa; 
+  background-color: #31d0aa;
 }
 
 .social-media-icon:hover,
-.social-media-icon:focus{
+.social-media-icon:focus {
   background-color: #4d5ae5;
-  
 }
 
 /*-----------------------MODERN ------------------*/
@@ -711,7 +703,8 @@ img {
   align-items: center;
   justify-content: center;
   background-color: rgba(46, 47, 66, 0.4);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .is-hidden {
@@ -719,7 +712,6 @@ img {
   visibility: hidden;
   pointer-events: none;
 }
-
 
 .modal {
   background-color: #fff;
@@ -732,7 +724,8 @@ img {
   width: 408px;
   min-height: 584px;
   background: #fcfcfc;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -745,12 +738,13 @@ img {
   border-radius: 50%;
   display: flex;
   align-items: center;
-  justify-content: center; 
-  background-color: #e7e9fc; 
+  justify-content: center;
+  background-color: #e7e9fc;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 0; 
+  padding: 0;
   cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn:hover,
@@ -760,7 +754,7 @@ img {
 }
 
 .modal-close-btn:hover .modal-close-icon,
-.modal-close-btn:focus .modal-close-icon{
+.modal-close-btn:focus .modal-close-icon {
   fill: #ffffff;
 }
 
@@ -769,14 +763,14 @@ svg {
 }
 
 /*-----------------------PORTFOLIO HEADER------------------*/
-.link-menu  {
+.link-menu {
   position: relative;
   color: #404bbf;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .carend::after {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   bottom: -1px;
@@ -804,20 +798,23 @@ svg {
 
 .section-menu {
   padding-top: 96px;
-  padding-bottom: 120px; 
+  padding-bottom: 120px;
 }
 
 .section-menu-item {
   margin-right: 24px;
   display: block;
   background: #f4f4fd;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1)
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .section-menu-item:last-child {
   margin-right: 0;
 }
- 
+
 .list-cap {
   justify-content: center;
   display: flex;
@@ -838,12 +835,16 @@ svg {
 .section-menu-link:focus {
   border: 1px solid transparent;
   background-color: #404bbf;
-  color: #FFFFFF;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-} 
+  color: #ffffff;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
 
 .section-menu-link {
-  transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: #4d5ae5;
   background-color: #f4f4fd;
   text-align: center;
@@ -867,16 +868,16 @@ svg {
 
 /*---------------------PHOTO SECTION-------------------*/
 .name-item-list {
-  width: calc((100% - 48px) /3);
+  width: calc((100% - 48px) / 3);
   display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-link:hover .cards-photo-text {
-  transform: translateY(0%); 
+  transform: translateY(0%);
 }
 .portfolio-link:focus .cards-photo-text {
-  transform: translateY(0%); 
+  transform: translateY(0%);
 }
 .cards {
   display: block;
@@ -885,7 +886,8 @@ svg {
 
 .cards:focus,
 .cards:hover {
-  box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .container-cards-photo {
@@ -899,14 +901,13 @@ svg {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color:#f4f4fd;
+  color: #f4f4fd;
   padding: 40px 32px;
   background-color: #4d5ae5;
   height: 100%;
   width: 100%;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-  transform: translateY(100%)
-
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(100%);
 }
 
 .list-cards {
@@ -916,7 +917,6 @@ svg {
   row-gap: 48px;
   flex-wrap: wrap;
   justify-content: center;
-
 }
 
 .name-photo {
@@ -938,5 +938,3 @@ svg {
   letter-spacing: 0.02em;
   color: var(--paragraph-color, #434455);
 }
-
-
