--- a/css/styles.css
+++ b/css/styles.css
@@ -773,6 +773,13 @@ svg {
 .name-item-list:hover {
   box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+
+.name-item-list:hover .container-cards-photo p.cards-photo-text {
+  transform: translateY(0%);
+}
+
+
+
 .visually-hidden {
   position: absolute;
   width: 1px;
