--- a/css/styles.css
+++ b/css/styles.css
@@ -770,12 +770,58 @@ svg {
   display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .name-item-list:hover {
   box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-.cards-photo-text{
-  transform: translate(0%);
+.portfolio-link:hover .cards-photo-text {
+  transform: translateY(0%);
+}
+.portfolio-link:focus .cards-photo-text {
+  transform: translateY(0%);
+}
+
+.container-cards-photo {
+  position: relative;
+  overflow: hidden;
+}
+
+.cards-photo-text {
+  position: absolute;
+  top: 0;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  height: 100%;
+  width: 100%;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(100%);
+}
+
+
+
+.cards-photo-text:hover {
+  transform: translateY(0%);
+}
+.cards-container {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+
+.cards {
+  display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.cards:focus,
+.cards:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+  0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 
@@ -791,8 +837,6 @@ svg {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-
-
 
 .section-menu-item {
   margin-right: 24px;
@@ -853,58 +897,9 @@ svg {
   border-radius: 4px;
 }
 
-.cards-container {
-  padding: 32px 16px;
-  border: 1px solid #e7e9fc;
-  border-top: none;
-}
-.list-cards {
-  display: flex;
-  column-gap: 24px;
-  list-style: none;
-  row-gap: 48px;
-  flex-wrap: wrap;
-  justify-content: center;
-}
 
 
 
-.portfolio-link:hover .cards-photo-text {
-  transform: translateY(0%);
-}
-.portfolio-link:focus .cards-photo-text {
-  transform: translateY(0%);
-}
-.cards {
-  display: block;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.cards:focus,
-.cards:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-  0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-
-.container-cards-photo {
-  position: relative;
-  overflow: hidden;
-}
-
-.cards-photo-text {
-  position: absolute;
-  top: 0;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #f4f4fd;
-  padding: 40px 32px;
-  background-color: #4d5ae5;
-  height: 100%;
-  width: 100%;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transform: translateY(100%);
-}
 
 .name-photo {
   margin-bottom: 8px;
