--- a/css/styles.css
+++ b/css/styles.css
@@ -802,11 +802,10 @@ svg {
   transform: translateY(100%);
 }
 
-
-
-.cards-photo-text:hover {
+.name-item-list:hover .cards-photo-text {
   transform: translateY(0%);
 }
+
 .cards-container {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
